--- a/bibliography/literature.bib
+++ b/bibliography/literature.bib
@@ -1,93 +1,191 @@
-@Article{bartel2004micrornas,
-   Author="Bartel, D. P. ",
-   Title="{{M}icro{R}{N}{A}s: genomics, biogenesis, mechanism, and function}",
-   Journal="Cell",
-   Year="2004",
-   Volume="116",
+@Article{Aebersold2016,
+   Author="Aebersold, R. and Head, S. R. and Legrain, P. et al.",
+   Title="{{S}ystems biology and proteomics in the era of mass spectrometry}",
+   Journal="Nature Reviews Molecular Cell Biology",
+   Year="2016",
+   Volume="17",
+   Number="10",
+   Pages="589--600",
+   Note="[Link: \url{https://www.nature.com/articles/nrm.2016.97}]"
+}
+
+@Book{Alberts2017,
+   Author="Alberts, B. and Johnson, A. and Lewis, J. and Morgan, D. and Raff, M. and Roberts, K. and Walter, P.",
+   Title="{{M}olecular {B}iology of the {C}ell}",
+   Publisher="Garland Science",
+   Year="2017",
+   Edition="6th"
+}
+
+@Article{Chalkley2019,
+   Author="Chalkley, R. J. and Tabb, D. L. and Medzihradszky, K. F. et al.",
+   Title="{{I}nformatics {C}hallenges in the {M}ass {S}pectrometry-{B}ased {C}haracterization of {P}osttranslational {M}odifications}",
+   Journal="Molecular \& Cellular Proteomics",
+   Year="2019",
+   Volume="18",
+   Number="11",
+   Pages="2110--2121",
+   Note="[Link: \url{https://www.mcponline.org/article/S1535-9476(20)31238-6/fulltext}]"
+}
+
+@Article{Domon2015,
+   Author="Domon, B. and Aebersold, R.",
+   Title="{{M}ass spectrometry and protein analysis}",
+   Journal="Science",
+   Year="2015",
+   Volume="350",
+   Number="6265",
+   Pages="1199--1204",
+   Note="[Link: \url{https://www.science.org/doi/10.1126/science.aad3490}]"
+}
+
+@Article{Hunter2012,
+   Author="Hunter, T.",
+   Title="{{T}he many roles of protein phosphorylation}",
+   Journal="Genome Biology",
+   Year="2012",
+   Volume="13",
+   Number="9",
+   Pages="249",
+   Note="[Link: \url{https://genomebiology.biomedcentral.com/articles/10.1186/gb-2012-13-9-249}]"
+}
+
+@Article{Khoury2011,
+   Author="Khoury, G. A. and Baliban, R. C. and Floudas, C. A.",
+   Title="{{P}roteome-wide post-translational modification analysis: methods and software}",
+   Journal="Proteomics",
+   Year="2011",
+   Volume="11",
+   Number="22",
+   Pages="4310--4325",
+   Note="[Link: \url{https://onlinelibrary.wiley.com/doi/full/10.1002/pmic.201100067}]"
+}
+
+@Article{Mann2001,
+   Author="Mann, M. and Hendrickson, R. C. and Pandey, A.",
+   Title="{{M}ass spectrometry and the proteomics revolution}",
+   Journal="Trends in Biotechnology",
+   Year="2001",
+   Volume="19",
+   Number="Suppl 1",
+   Pages="S79--S85",
+   Note="[Link: \url{https://pubmed.ncbi.nlm.nih.gov/11388796/}]"
+}
+
+@Article{Tanner2005,
+   Author="Tanner, S. and Shu, H. and Frank, A. et al.",
+   Title="{{I}nsignificance thresholds for multiple search engines}",
+   Journal="Journal of Proteome Research",
+   Year="2005",
+   Volume="4",
    Number="2",
-   Pages="281--297",
-   Month="Jan"
+   Pages="527--533",
+   Note="[Link: \url{https://pubs.acs.org/doi/10.1021/pr0497531}]"
 }
 
-@Article{helvik2007reliable,
-   Author="Helvik, S. A.  and Snøve, O.  and Sætrøm, P. ",
-   Title="{{R}eliable prediction of {D}rosha processing sites improves micro{R}{N}{A} gene prediction}",
-   Journal="Bioinformatics",
-   Year="2007",
-   Volume="23",
-   Number="2",
-   Pages="142--149",
-   Month="Jan"
+@Book{Walsh2006,
+   Author="Walsh, C. T.",
+   Title="{{P}osttranslational {M}odification of {P}roteins: {E}xpanding {N}ature's {I}nventory}",
+   Publisher="Roberts and Co. Publishers",
+   Year="2006"
 }
 
-@Article{lee2003the,
-   Author="Lee, Y.  and Ahn, C.  and Han, J.  and Choi, H.  and Kim, J.  and Yim, J.  and Lee, J.  and Provost, P.  and Radmark, O.  and Kim, S.  and Kim, V. N. ",
-   Title="{{T}he nuclear {R}{N}ase {I}{I}{I} {D}rosha initiates micro{R}{N}{A} processing}",
-   Journal="Nature",
-   Year="2003",
-   Volume="425",
-   Number="6956",
-   Pages="415--419",
-   Month="Sep",
-   PMID="14508493"
+@Article{Yates1995,
+   Author="Yates, J. R. and Eng, J. K. and McCormack, A. L. and Schieltz, D.",
+   Title="{{M}ethod to correlate tandem mass spectra of peptides with amino acid sequences in a protein database}",
+   Journal="Analytical Chemistry",
+   Year="1995",
+   Volume="67",
+   Number="8",
+   Pages="1426--1436",
+   Note="[Link: \url{https://pubs.acs.org/doi/10.1021/ac00104a022}]"
 }
 
-@Article{han2006molecular,
-   Author="Han, J.  and Lee, Y.  and Yeom, K. H.  and Nam, J. W.  and Heo, I.  and Rhee, J. K.  and Sohn, S. Y.  and Cho, Y.  and Zhang, B. T.  and Kim, V. N. ",
-   Title="{{M}olecular basis for the recognition of primary micro{R}{N}{A}s by the {D}rosha-{D}{G}{C}{R}8 complex}",
-   Journal="Cell",
-   Year="2006",
-   Volume="125",
-   Number="5",
-   Pages="887--901",
-   Month="Jun",
-   PMID="16751099"
+
+
+@inproceedings{Yilmaz22,
+  author = {Yilmaz, Melih and Fondrie, William E. and Bittremieux, Wout and Oh, Sewoong and Stafford Noble, William},
+  title = {De Novo Mass Spectrometry Peptide Sequencing with a Transformer Model},
+  booktitle = {Proceedings of the 39th International Conference on Machine Learning (ICML) PMLR 162},
+  year = {2022},
+  pages = {Y-Z},
+  url = {https://proceedings.mlr.press/v162/yilmaz22a/yilmaz22a.pdf}
 }
 
-@Article{zhang2010terminal,
-   Author="Zhang, X.  and Zeng, Y. ",
-   Title="{{T}he terminal loop region controls micro{R}{N}{A} processing by {D}rosha and {D}icer}",
-   Journal="Nucleic Acids Res.",
-   Year="2010",
-   Volume="38",
-   Number="21",
-   Pages="7689--7697",
-   Month="Nov",
-   PMID="20660014"
+@misc{CasanoDoc,
+  author = {Noble-Lab (GitHub)},
+  title = {Casanovo — De Novo Mass Spectrometry Peptide Sequencing with a Transformer Model},
+  year = {2024},
+  howpublished = {\url{https://casanovo.readthedocs.io/en/latest/}},
+  note = {Accessed <date>}
 }
 
-@Article{ma2013lower,
-   Author="Ma, H.  and Wu, Y.  and Choi, J. G.  and Wu, H. ",
-   Title="{{L}ower and upper stem-single-stranded {R}{N}{A} junctions together determine the {D}rosha cleavage site}",
-   Journal="Proc. Natl. Acad. Sci. U.S.A.",
-   Year="2013",
-   Volume="110",
-   Number="51",
-   Pages="20687--20692",
-   Month="Dec",
-   PMID="24297910"
+@article{Cox11_Andromeda,
+  author = {Cox, Jürgen and Neuhauser, Nadin and Michalski, Annette and Scheltema, Richard A. and Olsen, Jesper V. and Mann, Matthias},
+  title = {Andromeda – a peptide search engine integrated into the MaxQuant environment},
+  journal = {Journal of Proteome Research},
+  year = {2011},
+  volume = {10},
+  number = {4},
+  pages = {1794-1805},
+  doi = {10.1021/pr101065j},
+  url = {https://doi.org/10.1021/pr101065j}
 }
 
-@Article{hu2013droshapsp,
-   Author="Hu, X.  and Ma, C.  and Zhou, Y. ",
-   Title="{{A} novel two-layer {S}{V}{M} model in mi{R}{N}{A} {D}rosha processing site detection}",
-   Journal="BMC Syst Biol",
-   Year="2013",
-   Volume="7 Suppl 4",
-   Pages="S4",
-   PMID="24565218"
+@article{MSFraggerSite,
+  author = {Kong, Anthony T. and others},
+  title = {MSFragger: ultrafast and comprehensive peptide identification for mass spectrometry–based proteomics},
+  journal = {Nature Methods},
+  year = {2017},
+  volume = {14},
+  number = {5},
+  pages = {513-520},
+  url = {https://msfragger.nesvilab.org/}
 }
 
-@Article{forrest2014fantom5,
-   Author="Forrest, A. R.  and Kawaji, H.  and Rehli, M.  and Baillie, J. K.  and de Hoon, M. J.  and Haberle, V.  and Lassman, T.  and Kulakovskiy, I. V.  and Lizio, M.  and Itoh, M.  and Andersson, R.  and Mungall, C. J.  and Meehan, T. F.  and Schmeier, S.  and Bertin, N.  and J?rgensen, M.  and Dimont, E.  and Arner, E.  and Schmidl, C.  and Schaefer, U.  and Medvedeva, Y. A.  and Plessy, C.  and Vitezic, M.  and Severin, J.  and Semple, C.  and Ishizu, Y.  and Young, R. S.  and Francescatto, M.  and Alam, I.  and Albanese, D.  and Altschuler, G. M.  and Arakawa, T.  and Archer, J. A.  and Arner, P.  and Babina, M.  and Rennie, S.  and Balwierz, P. J.  and Beckhouse, A. G.  and Pradhan-Bhatt, S.  and Blake, J. A.  and Blumenthal, A.  and Bodega, B.  and Bonetti, A.  and Briggs, J.  and Brombacher, F.  and Burroughs, A. M.  and Califano, A.  and Cannistraci, C. V.  and Carbajo, D.  and Chen, Y.  and Chierici, M.  and Ciani, Y.  and Clevers, H. C.  and Dalla, E.  and Davis, C. A.  and Detmar, M.  and Diehl, A. D.  and Dohi, T.  and Drabl?s, F.  and Edge, A. S.  and Edinger, M.  and Ekwall, K.  and Endoh, M.  and Enomoto, H.  and Fagiolini, M.  and Fairbairn, L.  and Fang, H.  and Farach-Carson, M. C.  and Faulkner, G. J.  and Favorov, A. V.  and Fisher, M. E.  and Frith, M. C.  and Fujita, R.  and Fukuda, S.  and Furlanello, C.  and Furino, M.  and Furusawa, J.  and Geijtenbeek, T. B.  and Gibson, A. P.  and Gingeras, T.  and Goldowitz, D.  and Gough, J.  and Guhl, S.  and Guler, R.  and Gustincich, S.  and Ha, T. J.  and Hamaguchi, M.  and Hara, M.  and Harbers, M.  and Harshbarger, J.  and Hasegawa, A.  and Hasegawa, Y.  and Hashimoto, T.  and Herlyn, M.  and Hitchens, K. J.  and Ho Sui, S. J.  and Hofmann, O. M.  and Hoof, I.  and Hori, F.  and Huminiecki, L.  and Iida, K.  and Ikawa, T.  and Jankovic, B. R.  and Jia, H.  and Joshi, A.  and Jurman, G.  and Kaczkowski, B.  and Kai, C.  and Kaida, K.  and Kaiho, A.  and Kajiyama, K.  and Kanamori-Katayama, M.  and Kasianov, A. S.  and Kasukawa, T.  and Katayama, S.  and Kato, S.  and Kawaguchi, S.  and Kawamoto, H.  and Kawamura, Y. I.  and Kawashima, T.  and Kempfle, J. S.  and Kenna, T. J.  and Kere, J.  and Khachigian, L. M.  and Kitamura, T.  and Klinken, S. P.  and Knox, A. J.  and Kojima, M.  and Kojima, S.  and Kondo, N.  and Koseki, H.  and Koyasu, S.  and Krampitz, S.  and Kubosaki, A.  and Kwon, A. T.  and Laros, J. F.  and Lee, W.  and Lennartsson, A.  and Li, K.  and Lilje, B.  and Lipovich, L.  and Mackay-Sim, A.  and Manabe, R.  and Mar, J. C.  and Marchand, B.  and Mathelier, A.  and Mejhert, N.  and Meynert, A.  and Mizuno, Y.  and de Lima Morais, D. A.  and Morikawa, H.  and Morimoto, M.  and Moro, K.  and Motakis, E.  and Motohashi, H.  and Mummery, C. L.  and Murata, M.  and Nagao-Sato, S.  and Nakachi, Y.  and Nakahara, F.  and Nakamura, T.  and Nakamura, Y.  and Nakazato, K.  and van Nimwegen, E.  and Ninomiya, N.  and Nishiyori, H.  and Noma, S.  and Noma, S.  and Noazaki, T.  and Ogishima, S.  and Ohkura, N.  and Ohimiya, H.  and Ohno, H.  and Ohshima, M.  and Okada-Hatakeyama, M.  and Okazaki, Y.  and Orlando, V.  and Ovchinnikov, D. A.  and Pain, A.  and Passier, R.  and Patrikakis, M.  and Persson, H.  and Piazza, S.  and Prendergast, J. G.  and Rackham, O. J.  and Ramilowski, J. A.  and Rashid, M.  and Ravasi, T.  and Rizzu, P.  and Roncador, M.  and Roy, S.  and Rye, M. B.  and Saijyo, E.  and Sajantila, A.  and Saka, A.  and Sakaguchi, S.  and Sakai, M.  and Sato, H.  and Savvi, S.  and Saxena, A.  and Schneider, C.  and Schultes, E. A.  and Schulze-Tanzil, G. G.  and Schwegmann, A.  and Sengstag, T.  and Sheng, G.  and Shimoji, H.  and Shimoni, Y.  and Shin, J. W.  and Simon, C.  and Sugiyama, D.  and Sugiyama, T.  and Suzuki, M.  and Suzuki, N.  and Swoboda, R. K.  and 't Hoen, P. A.  and Tagami, M.  and Takahashi, N.  and Takai, J.  and Tanaka, H.  and Tatsukawa, H.  and Tatum, Z.  and Thompson, M.  and Toyodo, H.  and Toyoda, T.  and Valen, E.  and van de Wetering, M.  and van den Berg, L. M.  and Verado, R.  and Vijayan, D.  and Vorontsov, I. E.  and Wasserman, W. W.  and Watanabe, S.  and Wells, C. A.  and Winteringham, L. N.  and Wolvetang, E.  and Wood, E. J.  and Yamaguchi, Y.  and Yamamoto, M.  and Yoneda, M.  and Yonekura, Y.  and Yoshida, S.  and Zabierowski, S. E.  and Zhang, P. G.  and Zhao, X.  and Zucchelli, S.  and Summers, K. M.  and Suzuki, H.  and Daub, C. O.  and Kawai, J.  and Heutink, P.  and Hide, W.  and Freeman, T. C.  and Lenhard, B.  and Bajic, V. B.  and Taylor, M. S.  and Makeev, V. J.  and Sandelin, A.  and Hume, D. A.  and Carninci, P.  and Hayashizaki, Y. ",
-   Title="{{A} promoter-level mammalian expression atlas}",
-   Journal="Nature",
-   Year="2014",
-   Volume="507",
-   Number="7493",
-   Pages="462--470",
-   Month="Mar",
-   PMID="24670764"
+@misc{MaxQuantGuide,
+  author = {Cox Lab},
+  title = {MaxQuant Software: Comprehensive Guide for Mass Spectrometry Data Analysis},
+  year = {2024},
+  howpublished = {\url{https://www.maxquant.de/}},
+  note = {Accessed <date>}
 }
+
+@article{Chen21,
+  author = {Chen, Xiulan and Sun, Yaping and Zhang, Tingting and Shu, Lian and Roepstorff, Peter and Yang, Fuquan},
+  title = {Quantitative Proteomics Using Isobaric Labeling: A Practical Guide},
+  journal = {Genomics, Proteomics & Bioinformatics},
+  year = {2022},
+  volume = {19},
+  number = {5},
+  pages = {689–706},
+  doi = {10.1016/j.gpb.2021.08.012},
+  url = {https://doi.org/10.1016/j.gpb.2021.08.012}
+}
+
+@misc{Lee_Thermo23,
+  author = {Lee, Amanda},
+  title = {Tandem Mass Tag (TMT) Multiplexing Approach to Protein Quantitation: Q&A},
+  year = {2023},
+  howpublished = {\url{https://www.thermofisher.com/blog/analyteguru/tandem-mass-tag-tmt-multiplexing-approach-to-protein-quantitation-qa/}},
+  note = {Accessed <date>}
+}
+
+@misc{ThermoTMTSystems,
+  author = {Thermo Fisher Scientific},
+  title = {Tandem Mass Tag Systems overview},
+  year = {n.d.},
+  howpublished = {\url{https://www.thermofisher.com/us/en/home/life-science/protein-biology/protein-quantitation-mass-spectrometry/tandem-mass-tag-systems.html}},
+  note = {Accessed <date>}
+}
+
+@article{SabaViner16,
+  author = {Saba, Julian and Viner, Rosa},
+  title = {High Throughput Quantitative Proteomics Using Isobaric Tags},
+  journal = {Thermo Fisher Scientific Whitepaper via ACS},
+  year = {2016},
+  url = {https://documents.thermofisher.com/TFS-Assets/CMD/Reference-Materials/wp-65593-quantitative-proteomics-isobaric-tags-wp65593-en.pdf}
+}
+
 
 
