--- a/components/info.tex
+++ b/components/info.tex
@@ -3,6 +3,7 @@
 \usepackage[pdftex]{graphicx}
 \usepackage[ansinew]{inputenc}
 \usepackage{geometry}
+\usepackage{setspace}
 \usepackage{bbold}
 \geometry{a4paper,left=2.5cm,right=2.5cm, top=2.5cm, bottom=3cm}
 \newcommand{\HRule}{\rule{\linewidth}{0.5mm}}
@@ -39,6 +40,9 @@
 \vfill
 \end{center}
 \end{titlepage}
+\newpage
+\newpage
+\newpage
 \pagestyle{empty}
 
 
@@ -52,20 +56,20 @@
 \includegraphics[width=0.3\textwidth]{logo2.png}
 \hfill
 \includegraphics[width=0.4\textwidth]{logo1.png}  
-\\[3cm]  
+\\[1cm]  
 
 
 
-{\Large Bioinformatics Program}\\[0.5cm]
+{\Large Bioinformatics Program}\\[1.5cm]
 {\Large Technical University of Munich}\\[0.5cm]
-{\Large Ludwig-Maximilians-Universit\"at M\"unchen}\\[2cm]
-{\Large Bachelor's Thesis in Bioinformatics}\\[2cm]
-{\textbf{\LARGE Expanding De Novo Peptide Sequencing to TMT Proteomics Data including post translational modifications to Uncover Biological Insights Beyond Database-driven Searches}}\\[1cm]
-{\textbf{\LARGE Erweiterung transformerbasierter De-novo-Peptidsequenzierung mit Post-translationalen Modifikationen auf TMT-Proteomdaten zum Erkenntnisgewinn jenseits klassischer Datenbanksuchen}}\\[1cm]
+{\Large Ludwig-Maximilians-Universit\"at M\"unchen}\\[1.5cm]
+{\Large Bachelor's Thesis in Bioinformatics}\\[1.5cm]
+{\setstretch{1.4} \textbf{\LARGE Expanding De Novo Peptide Sequencing to TMT Proteomics Data including post translational modifications to Uncover Biological Insights Beyond Database-driven Searches}\par}
+\vspace{1cm} % Abstand zwischen den Titeln
+{\setstretch{1.4} \textbf{\LARGE Erweiterung transformerbasierter De-novo-Peptidsequenzierung mit Post-translationalen Modifikationen auf TMT-Proteomdaten zum Erkenntnisgewinn jenseits klassischer Datenbanksuchen}\par}
+\vspace{2cm}
 
-\end{center}
-
-\begin{center}\Large
+\large
   \begin{tabular}{ll}
     Author:& Moritz Rothhaar\\
     Supervisor: &  Prof. Dr. Julien Gagneur\\
@@ -73,6 +77,7 @@
     & I29 Chair of Computational Molecular Medicine, TUM, Munich\\
     Submitted:     &  15.02.2026
   \end{tabular}
+
 \end{center}
 
 
@@ -80,6 +85,30 @@
 }% end title page
 
 \end{titlepage}
+
+\newpage
+
+\thispagestyle{empty}
+
+\newpage
+
+\begin{center}
+
+\textbf{Statement of Authorship}
+
+Ich versichere, dass ich diese Bachelor’s Thesis selbständig verfasst und nur die angegebenen Quellen und Hilfsmittel verwendet habe.
+
+I confirm that this bachelor’s thesis is my own work and I have documented all sources and material used.
+
+München, 15.02.2026
+
+\vfill
+
+i
+
+\end{center}
+
+\newpage
 
 
 
