--- a/components/info.tex
+++ b/components/info.tex
@@ -44,6 +44,10 @@
 \newpage
 \newpage
 \pagestyle{empty}
+\newpage
+\thispagestyle{empty} % Keine Seitenzahl
+\mbox{}               % Erzeugt ein unsichtbares Element
+\newpage
 
 
 
@@ -87,27 +91,49 @@
 \end{titlepage}
 
 \newpage
+\thispagestyle{empty} % Keine Seitenzahl
+\mbox{}               % Erzeugt ein unsichtbares Element
+\newpage
+
+\newpage
 
 \thispagestyle{empty}
 
 \newpage
 
 \begin{center}
+    \vspace*{1cm}
+    
+    \Huge
+    \textbf{Statement of Authorship}
+    
+    \vspace{2cm}
+    
+    \normalsize
+    Ich versichere, dass ich diese Bachelor's Thesis selbst\"andig verfasst und nur die angegebenen Quellen und Hilfsmittel verwendet habe.
+    
+    \vspace{1cm}
+    
+    \textit{I confirm that this bachelor's thesis is my own work and I have documented all sources and material used.}
+    
+    \vspace{2cm}
+    
+    M\"unchen, 15.02.2026
+    
+    \vspace{3cm}
+    
+    \rule{5cm}{0.4pt} \\
+    (Unterschrift)
 
-\textbf{Statement of Authorship}
-
-Ich versichere, dass ich diese Bachelor’s Thesis selbständig verfasst und nur die angegebenen Quellen und Hilfsmittel verwendet habe.
-
-I confirm that this bachelor’s thesis is my own work and I have documented all sources and material used.
-
-München, 15.02.2026
-
-\vfill
-
-i
-
+    \vfill
+    
+    i % Römische Seitenzahl (falls gewünscht)
 \end{center}
 
+\newpage
+\newpage
+\thispagestyle{empty} % Keine Seitenzahl
+\mbox{}               % Erzeugt ein unsichtbares Element
 \newpage
 
 
