--- a/main.tex
+++ b/main.tex
@@ -22,9 +22,6 @@
 % include settings
 \input{components/settings}
 
-% include title and author information for the cover
-\input{components/info}
-
 % include commands
 \input{components/commands}
 
@@ -41,17 +38,14 @@
 	\frontmatter
 	\pagestyle{plain}
 	
-	\input{components/cover}
-
-	\input{components/titlepage}
 	
-	\input{components/disclaimer}
 	
 	%\input{components/acknowledgements}
 	
 	\input{components/abstract}
 
 	\tableofcontents
+	%\listofabbreviations
 	%\listoffigures
 	%\listoftables
   
