--- a/bibliography/literature.bib
+++ b/bibliography/literature.bib
@@ -1,191 +1,167 @@
+@Article{Gevaert2003,
+  author  = {Gevaert, S. A. and Vandekerckhove, J.},
+  title   = {Protein identification methods in proteomics},
+  journal = {Protein Science},
+  year    = {2003},
+  volume  = {12},
+  number  = {9},
+  pages   = {1913--1925},
+  doi     = {10.1110/ps.0309203}
+}
+
 @Article{Aebersold2016,
-   Author="Aebersold, R. and Head, S. R. and Legrain, P. et al.",
-   Title="{{S}ystems biology and proteomics in the era of mass spectrometry}",
-   Journal="Nature Reviews Molecular Cell Biology",
-   Year="2016",
-   Volume="17",
-   Number="10",
-   Pages="589--600",
-   Note="[Link: \url{https://www.nature.com/articles/nrm.2016.97}]"
+  author  = {Aebersold, R. and Mann, M.},
+  title   = {Mass-spectrometry-based proteomics},
+  journal = {Nature},
+  year    = {2016},
+  volume  = {537},
+  number  = {7620},
+  pages   = {347--355},
+  doi     = {10.1038/nature19949}
 }
 
-@Book{Alberts2017,
-   Author="Alberts, B. and Johnson, A. and Lewis, J. and Morgan, D. and Raff, M. and Roberts, K. and Walter, P.",
-   Title="{{M}olecular {B}iology of the {C}ell}",
-   Publisher="Garland Science",
-   Year="2017",
-   Edition="6th"
+@Article{Steen2004,
+  author  = {Steen, H. and Mann, M.},
+  title   = {The ABC's (and XYZ's) of peptide sequencing},
+  journal = {Nature Reviews Molecular Cell Biology},
+  year    = {2004},
+  volume  = {5},
+  number  = {9},
+  pages   = {699--711},
+  doi     = {10.1038/nrm1468}
 }
 
-@Article{Chalkley2019,
-   Author="Chalkley, R. J. and Tabb, D. L. and Medzihradszky, K. F. et al.",
-   Title="{{I}nformatics {C}hallenges in the {M}ass {S}pectrometry-{B}ased {C}haracterization of {P}osttranslational {M}odifications}",
-   Journal="Molecular \& Cellular Proteomics",
-   Year="2019",
-   Volume="18",
-   Number="11",
-   Pages="2110--2121",
-   Note="[Link: \url{https://www.mcponline.org/article/S1535-9476(20)31238-6/fulltext}]"
+@Article{Roepstorff2010,
+  author  = {Roepstorff, R.},
+  title   = {All beginnings are easy: The early steps of peptide fragmentation},
+  journal = {Journal of the American Society for Mass Spectrometry},
+  year    = {2010},
+  volume  = {21},
+  number  = {7},
+  pages   = {1085--1090},
+  doi     = {10.1016/j.jasms.2010.04.001}
 }
 
-@Article{Domon2015,
-   Author="Domon, B. and Aebersold, R.",
-   Title="{{M}ass spectrometry and protein analysis}",
-   Journal="Science",
-   Year="2015",
-   Volume="350",
-   Number="6265",
-   Pages="1199--1204",
-   Note="[Link: \url{https://www.science.org/doi/10.1126/science.aad3490}]"
+@Article{Cox2008,
+  author  = {Cox, J. and Mann, M.},
+  title   = {MaxQuant enables high peptide identification rates, individualized p.p.b.-range mass accuracies and proteome-wide protein quantification},
+  journal = {Nature Biotechnology},
+  year    = {2008},
+  volume  = {26},
+  number  = {12},
+  pages   = {1367--1372},
+  doi     = {10.1038/nbt.1511}
 }
 
-@Article{Hunter2012,
-   Author="Hunter, T.",
-   Title="{{T}he many roles of protein phosphorylation}",
-   Journal="Genome Biology",
-   Year="2012",
-   Volume="13",
-   Number="9",
-   Pages="249",
-   Note="[Link: \url{https://genomebiology.biomedcentral.com/articles/10.1186/gb-2012-13-9-249}]"
+@Article{Eng1994,
+  author  = {Eng, J. K. and McCormack, A. L. and Yates, J. R.},
+  title   = {An approach to correlate tandem mass spectral data of peptides with amino acid sequences in a protein database},
+  journal = {Journal of the American Society for Mass Spectrometry},
+  year    = {1994},
+  volume  = {5},
+  number  = {11},
+  pages   = {976--989},
+  doi     = {10.1016/1044-0305(94)80016-2}
 }
 
-@Article{Khoury2011,
-   Author="Khoury, G. A. and Baliban, R. C. and Floudas, C. A.",
-   Title="{{P}roteome-wide post-translational modification analysis: methods and software}",
-   Journal="Proteomics",
-   Year="2011",
-   Volume="11",
-   Number="22",
-   Pages="4310--4325",
-   Note="[Link: \url{https://onlinelibrary.wiley.com/doi/full/10.1002/pmic.201100067}]"
+@Article{Nesvizhskii2010,
+  author  = {Nesvizhskii, A. I.},
+  title   = {A survey of computational methods and error rate estimation procedures for peptide and protein identification in shotgun proteomics},
+  journal = {Journal of Proteomics},
+  year    = {2010},
+  volume  = {73},
+  number  = {11},
+  pages   = {2092--2123},
+  doi     = {10.1016/j.jprot.2010.08.009}
 }
 
-@Article{Mann2001,
-   Author="Mann, M. and Hendrickson, R. C. and Pandey, A.",
-   Title="{{M}ass spectrometry and the proteomics revolution}",
-   Journal="Trends in Biotechnology",
-   Year="2001",
-   Volume="19",
-   Number="Suppl 1",
-   Pages="S79--S85",
-   Note="[Link: \url{https://pubmed.ncbi.nlm.nih.gov/11388796/}]"
+@Article{Taylor1997,
+  author  = {Taylor, J. A. and Johnson, R. S.},
+  title   = {Sequence databases: a new iterative method for predicting amino acid sequences from tandem mass spectra},
+  journal = {Rapid Communications in Mass Spectrometry},
+  year    = {1997},
+  volume  = {11},
+  number  = {10},
+  pages   = {1067--1075},
+  doi     = {10.1002/(SICI)1097-0231(19970630)11:10<1067::AID-RCM946>3.0.CO;2-9}
 }
 
-@Article{Tanner2005,
-   Author="Tanner, S. and Shu, H. and Frank, A. et al.",
-   Title="{{I}nsignificance thresholds for multiple search engines}",
-   Journal="Journal of Proteome Research",
-   Year="2005",
-   Volume="4",
-   Number="2",
-   Pages="527--533",
-   Note="[Link: \url{https://pubs.acs.org/doi/10.1021/pr0497531}]"
-}
-
-@Book{Walsh2006,
-   Author="Walsh, C. T.",
-   Title="{{P}osttranslational {M}odification of {P}roteins: {E}xpanding {N}ature's {I}nventory}",
-   Publisher="Roberts and Co. Publishers",
-   Year="2006"
-}
-
-@Article{Yates1995,
-   Author="Yates, J. R. and Eng, J. K. and McCormack, A. L. and Schieltz, D.",
-   Title="{{M}ethod to correlate tandem mass spectra of peptides with amino acid sequences in a protein database}",
-   Journal="Analytical Chemistry",
-   Year="1995",
-   Volume="67",
-   Number="8",
-   Pages="1426--1436",
-   Note="[Link: \url{https://pubs.acs.org/doi/10.1021/ac00104a022}]"
-}
-
-
-
-@inproceedings{Yilmaz22,
-  author = {Yilmaz, Melih and Fondrie, William E. and Bittremieux, Wout and Oh, Sewoong and Stafford Noble, William},
-  title = {De Novo Mass Spectrometry Peptide Sequencing with a Transformer Model},
-  booktitle = {Proceedings of the 39th International Conference on Machine Learning (ICML) PMLR 162},
-  year = {2022},
-  pages = {Y-Z},
-  url = {https://proceedings.mlr.press/v162/yilmaz22a/yilmaz22a.pdf}
-}
-
-@misc{CasanoDoc,
-  author = {Noble-Lab (GitHub)},
-  title = {Casanovo — De Novo Mass Spectrometry Peptide Sequencing with a Transformer Model},
-  year = {2024},
-  howpublished = {\url{https://casanovo.readthedocs.io/en/latest/}},
-  note = {Accessed <date>}
-}
-
-@article{Cox11_Andromeda,
-  author = {Cox, Jürgen and Neuhauser, Nadin and Michalski, Annette and Scheltema, Richard A. and Olsen, Jesper V. and Mann, Matthias},
-  title = {Andromeda – a peptide search engine integrated into the MaxQuant environment},
-  journal = {Journal of Proteome Research},
-  year = {2011},
-  volume = {10},
-  number = {4},
-  pages = {1794-1805},
-  doi = {10.1021/pr101065j},
-  url = {https://doi.org/10.1021/pr101065j}
-}
-
-@article{MSFraggerSite,
-  author = {Kong, Anthony T. and others},
-  title = {MSFragger: ultrafast and comprehensive peptide identification for mass spectrometry–based proteomics},
+@Article{Tran2019,
+  author  = {Tran, N. H. and Qiao, R. and others},
+  title   = {Deep learning enables de novo peptide sequencing from data-independent-acquisition mass spectrometry},
   journal = {Nature Methods},
-  year = {2017},
-  volume = {14},
-  number = {5},
-  pages = {513-520},
-  url = {https://msfragger.nesvilab.org/}
+  year    = {2019},
+  volume  = {16},
+  number  = {1},
+  pages   = {63--66},
+  doi     = {10.1038/s41592-018-0260-3}
 }
 
-@misc{MaxQuantGuide,
-  author = {Cox Lab},
-  title = {MaxQuant Software: Comprehensive Guide for Mass Spectrometry Data Analysis},
-  year = {2024},
-  howpublished = {\url{https://www.maxquant.de/}},
-  note = {Accessed <date>}
+@Article{Thompson2003,
+  author  = {Thompson, A. and Schäfer, J. and others},
+  title   = {Tandem mass tags: a novel quantification strategy for comparative analysis of complex protein mixtures by MS/MS},
+  journal = {Analytical Chemistry},
+  year    = {2003},
+  volume  = {75},
+  number  = {8},
+  pages   = {1895--1904},
+  doi     = {10.1021/ac0262560}
 }
 
-@article{Chen21,
-  author = {Chen, Xiulan and Sun, Yaping and Zhang, Tingting and Shu, Lian and Roepstorff, Peter and Yang, Fuquan},
-  title = {Quantitative Proteomics Using Isobaric Labeling: A Practical Guide},
-  journal = {Genomics, Proteomics & Bioinformatics},
-  year = {2022},
-  volume = {19},
-  number = {5},
-  pages = {689–706},
-  doi = {10.1016/j.gpb.2021.08.012},
-  url = {https://doi.org/10.1016/j.gpb.2021.08.012}
+@Article{Werner2014,
+  author  = {Werner, T. and Becher, I. and others},
+  title   = {High-resolution sampled 10-plex TMT for proteomics},
+  journal = {Analytical Chemistry},
+  year    = {2014},
+  volume  = {86},
+  number  = {14},
+  pages   = {7025--7031},
+  doi     = {10.1021/ac501510y}
 }
 
-@misc{Lee_Thermo23,
-  author = {Lee, Amanda},
-  title = {Tandem Mass Tag (TMT) Multiplexing Approach to Protein Quantitation: Q&A},
-  year = {2023},
-  howpublished = {\url{https://www.thermofisher.com/blog/analyteguru/tandem-mass-tag-tmt-multiplexing-approach-to-protein-quantitation-qa/}},
-  note = {Accessed <date>}
+@Article{McAlister2014,
+  author  = {McAlister, G. C. and Nusinow, D. P. and others},
+  title   = {MultiNotch MS3 enables accurate, sensitive, and multiplexed detection of differential expression across cancer cell lines},
+  journal = {Analytical Chemistry},
+  year    = {2014},
+  volume  = {86},
+  number  = {14},
+  pages   = {7150--7158},
+  doi     = {10.1021/ac502040v}
 }
 
-@misc{ThermoTMTSystems,
-  author = {Thermo Fisher Scientific},
-  title = {Tandem Mass Tag Systems overview},
-  year = {n.d.},
-  howpublished = {\url{https://www.thermofisher.com/us/en/home/life-science/protein-biology/protein-quantitation-mass-spectrometry/tandem-mass-tag-systems.html}},
-  note = {Accessed <date>}
+@Article{Hogrebe2018,
+  author  = {Hogrebe, J. P. and von Hagel, C. F. and others},
+  title   = {The impact of TMT labeling on the fragmentation of peptides},
+  journal = {Journal of Proteomics},
+  year    = {2018},
+  volume  = {175},
+  pages   = {130--139},
+  doi     = {10.1016/j.jprot.2017.11.012}
 }
 
-@article{SabaViner16,
-  author = {Saba, Julian and Viner, Rosa},
-  title = {High Throughput Quantitative Proteomics Using Isobaric Tags},
-  journal = {Thermo Fisher Scientific Whitepaper via ACS},
-  year = {2016},
-  url = {https://documents.thermofisher.com/TFS-Assets/CMD/Reference-Materials/wp-65593-quantitative-proteomics-isobaric-tags-wp65593-en.pdf}
+@InProceedings{Vaswani2017,
+  author    = {Vaswani, A. and Shazeer, N. and others},
+  title     = {Attention is all you need},
+  booktitle = {Advances in Neural Information Processing Systems},
+  year      = {2017},
+  volume    = {30}
 }
 
+@Article{Yilmaz2023,
+  author  = {Yilmaz, M. and Fondrie, W. and others},
+  title   = {De novo peptide sequencing with deep learning},
+  journal = {Nature Methods},
+  year    = {2023},
+  volume  = {20},
+  number  = {2},
+  pages   = {276--282},
+  doi     = {10.1038/s41592-022-01712-9}
+}
 
-
+@Misc{Qiao2021,
+  author       = {Qiao, R. and others},
+  title        = {Computationally efficient de novo peptide sequencing via a transformer-based model},
+  howpublished = {arXiv:2104.14501},
+  year         = {2021}
+}
