--- a/main.tex
+++ b/main.tex
@@ -56,9 +56,11 @@
 	
 	%Week 1
 	\input{chapters/introduction}
+	\input{chapters/background}
+	\input{chapters/datasets}
 	\input{chapters/methods}
 	\input{chapters/results}
-	\input{chapters/conclusion}
+	\input{chapters/discussion}
 	
 	\printbibliography[title=References]
 	
