--- a/main.tex
+++ b/main.tex
@@ -43,6 +43,8 @@
 	%\input{components/acknowledgements}
 	
 	\input{components/abstract}
+	
+	\input{components/kurzzusammenfassung}
 
 	\tableofcontents
 	%\listofabbreviations
@@ -63,6 +65,8 @@
 	\input{chapters/discussion}
 	
 	\printbibliography[title=References]
+	
+	\input{chapters/supplementary}
 	
 	
 
