--- a/main.tex
+++ b/main.tex
@@ -40,16 +40,16 @@
 	
 	
 	
-	%\input{components/acknowledgements}
+	\input{components/acknowledgements}
 	
 	\input{components/abstract}
 	
 	\input{components/kurzzusammenfassung}
 
 	\tableofcontents
-	%\listofabbreviations
-	%\listoffigures
-	%\listoftables
+	\listofabbreviations
+	\listoffigures
+	\listoftables
   
     %\input{components/outline}
 
