--- a/bibliography/literature.bib
+++ b/bibliography/literature.bib
@@ -165,3 +165,31 @@
   howpublished = {arXiv:2104.14501},
   year         = {2021}
 }
+
+@Article{Wang2022,
+  author  = {Wang, J. J. and Wang, K. and Perez-Riverol, G. W. and others},
+  title   = {Massive-KB: A Comprehensive Patterns and Evidence-Based Virtual Spectral Library},
+  journal = {Journal of Proteome Research},
+  year    = {2022},
+  volume  = {21},
+  number  = {9},
+  pages   = {2144--2155},
+  doi     = {10.1021/acs.jproteome.2c00224}
+}
+
+@InProceedings{Yue2024,
+  author    = {Yue, Z. and others},
+  title     = {Multi-PTM PROSPECT: A Large-scale Dataset for Post-translational Modification Analysis},
+  booktitle = {Advances in Neural Information Processing Systems (NeurIPS) Datasets and Benchmarks Track},
+  year      = {2024},
+  url       = {https://proceedings.neurips.cc/paper_files/paper/2024/file/ed0c1f444b603cf9d158918050770765-Paper-Datasets_and_Benchmarks_Track.pdf}
+}
+
+@Misc{MassiveKB,
+  author       = {{Mass Spectrometry Interactive Virtual Environment (MassIVE)}},
+  title        = {Massive-KB Libraries},
+  howpublished = {University of California San Diego},
+  year         = {2025},
+  note         = {Accessed: 2025-12-26},
+  url          = {https://massive.ucsd.edu/ProteoSAFe/static/massive-kb-libraries.jsp}
+}
