--- a/bibliography/literature.bib
+++ b/bibliography/literature.bib
@@ -42,6 +42,58 @@
   doi     = {10.1016/j.jasms.2010.04.001}
 }
 
+@Article{Zeng2024,
+  author  = {Zeng, W. and others},
+  title   = {PROSPECT-MultiPTM: A large-scale dataset for machine learning in proteomics},
+  journal = {Advances in Neural Information Processing Systems},
+  year    = {2024},
+  note    = {NeurIPS Datasets and Benchmarks Track}
+}
+
+@Article{Zolg2017,
+  author  = {Zolg, D. P. and others},
+  title   = {Building ProteomeTools based on a complete synthetic human proteome},
+  journal = {Nature Methods},
+  year    = {2017},
+  volume  = {14},
+  number  = {3},
+  pages   = {259--262},
+  doi     = {10.1038/nmeth.4153}
+}
+
+@Article{Perez-Riverol2022,
+  author  = {Perez-Riverol, Y. and others},
+  title   = {The PRIDE database resources in 2022: a hub for mass spectrometry-based proteomics evidence},
+  journal = {Nucleic Acids Research},
+  year    = {2022},
+  volume  = {50},
+  number  = {D1},
+  pages   = {D543--D552},
+  doi     = {10.1093/nar/gkab1038}
+}
+
+@Article{Leis2022,
+  author  = {Leis, J. P. and others},
+  title   = {ProForma 2.0: Unifying the encoding of modified proteins and peptides},
+  journal = {Journal of Proteome Research},
+  year    = {2022},
+  volume  = {21},
+  number  = {5},
+  pages   = {1245--1253},
+  doi     = {10.1021/acs.jproteome.1c00914}
+}
+
+@Article{Wang2018,
+  author  = {Wang, M. and others},
+  title   = {Assembling the community-scale human mass spectrometry knowledge base},
+  journal = {Cell Systems},
+  year    = {2018},
+  volume  = {7},
+  number  = {4},
+  pages   = {412--421},
+  doi     = {10.1016/j.cels.2018.08.004}
+}
+
 @Article{Cox2008,
   author  = {Cox, J. and Mann, M.},
   title   = {MaxQuant enables high peptide identification rates, individualized p.p.b.-range mass accuracies and proteome-wide protein quantification},
@@ -140,6 +192,27 @@
   doi     = {10.1016/j.jprot.2017.11.012}
 }
 
+@Article{Rauniyar2014,
+  author  = {Rauniyar, N. and Yates, J. R.},
+  title   = {Isobaric labeling-based relative quantification in shotgun proteomics},
+  journal = {Journal of Proteome Research},
+  year    = {2014},
+  volume  = {13},
+  number  = {12},
+  pages   = {5293--5309},
+  doi     = {10.1021/pr500827s}
+}
+
+@Article{Budnik2018,
+  author  = {Budnik, B. and Levy, E. and Harmange, G. and others},
+  title   = {SCoPE-MS: scalable carrier-of-alkenes-based proteomics exposure monitors cell heterogeneity in 200 individual cells},
+  journal = {Genome Biology},
+  year    = {2018},
+  volume  = {19},
+  pages   = {161},
+  doi     = {10.1186/s13059-018-1547-5}
+}
+
 @InProceedings{Vaswani2017,
   author    = {Vaswani, A. and Shazeer, N. and others},
   title     = {Attention is all you need},
@@ -164,6 +237,17 @@
   title        = {Computationally efficient de novo peptide sequencing via a transformer-based model},
   howpublished = {arXiv:2104.14501},
   year         = {2021}
+}
+
+@Article{Tran2017,
+  author  = {Tran, N. H. and Zhang, X. and Shan, L. and others},
+  title   = {De novo peptide sequencing by deep learning},
+  journal = {Proceedings of the National Academy of Sciences (PNAS)},
+  year    = {2017},
+  volume  = {114},
+  number  = {31},
+  pages   = {8247--8252},
+  doi     = {10.1073/pnas.1705645114}
 }
 
 @Article{Wang2022,
@@ -192,4 +276,51 @@
   year         = {2025},
   note         = {Accessed: 2025-12-26},
   url          = {https://massive.ucsd.edu/ProteoSAFe/static/massive-kb-libraries.jsp}
+}
+
+@article{KlaprothAndrade2025,
+  author = {Klaproth-Andrade, D. and Bruns, Y. and Nix, C. and Gabriel, W. and Bergant, V. and Wilhelm, M. and Pichlmair, A. and Gagneur, J.},
+  title = {Modanovo: A Unified Model for Post-Translational Modification-Aware de Novo Sequencing Using Experimental Spectra from In Vivo and Synthetic Peptides},
+  journal = {Molecular \& Cellular Proteomics / bioRxiv preprint},
+  year = {2024},
+  doi = {10.1101/2025.09.12.675784},
+  note = {Accessed via bioRxiv and MCP announcement}
+}
+
+@Article{Deutsch2012,
+  author  = {Deutsch, E. W.},
+  title   = {The Mascot Generic Format},
+  journal = {Methods in Molecular Biology},
+  year    = {2012},
+  volume  = {909},
+  pages   = {203--212},
+  doi     = {10.1007/978-1-61779-959-4_13}
+}
+
+@Article{Pedregosa2011,
+  author  = {Pedregosa, F. and Varoquaux, G. and Gramfort, A. and others},
+  title   = {Scikit-learn: Machine Learning in Python},
+  journal = {Journal of Machine Learning Research},
+  year    = {2011},
+  volume  = {12},
+  pages   = {2825--2830}
+}
+
+@Article{Yilmaz2022,
+  author  = {Yilmaz, M. and Fondrie, W. E. and Bittremieux, B. and others},
+  title   = {De novo peptide sequencing with a transformer model},
+  journal = {Nature Methods},
+  year    = {2022},
+  volume  = {19},
+  pages   = {1109--1117},
+  doi     = {10.1038/s41592-022-01530-5}
+}
+
+
+
+@InProceedings{Micikevicius2017,
+  author    = {Micikevicius, P. and others},
+  title     = {Mixed Precision Training},
+  booktitle = {International Conference on Learning Representations (ICLR)},
+  year      = {2018}
 }
