--- a/bibliography/literature.bib
+++ b/bibliography/literature.bib
@@ -514,3 +514,187 @@ The identification of these additional sequences suggests that the "dark proteom
   doi     = {10.1038/s41596-018-0006-9},
   note    = {Discusses the challenges of precursor selection and isotopic interference in TMT workflows.}
 }
+
+
+@Article{Lim2021,
+  author  = {Lim, M. Y. and others},
+  title   = {Predicting the presence and localization of post-translational modifications in peptide fragment ion spectra},
+  journal = {Nature Communications},
+  year    = {2021},
+  volume  = {12},
+  number  = {1},
+  pages   = {3245},
+  doi     = {10.1038/s41467-021-23545-x}
+}
+
+@Article{Zhu2023,
+  author  = {Zhu, Y. and others},
+  title   = {Transfer learning for peptide identification in proteomics},
+  journal = {Briefings in Bioinformatics},
+  year    = {2023},
+  volume  = {24},
+  number  = {2},
+  pages   = {bbad032},
+  doi     = {10.1093/bib/bbad032}
+}
+
+@Article{Nesvizhskii2014,
+  author  = {Nesvizhskii, A. I.},
+  title   = {Proteogenomics: concepts, applications and computational strategies},
+  journal = {Nature Methods},
+  year    = {2014},
+  volume  = {11},
+  number  = {11},
+  pages   = {1114--1125},
+  doi     = {10.1038/nmeth.3144}
+}
+
+@Article{Zois2022,
+  author  = {Zois, C. E. and others},
+  title   = {Liver glycogen phosphorylase is upregulated in glioblastoma and promotes tumor cell survival},
+  journal = {Cell Death and Disease},
+  year    = {2022},
+  volume  = {13},
+  number  = {10},
+  pages   = {885},
+  doi     = {10.1038/s41419-022-05332-6}
+}
+
+@Article{Favaro2012,
+  author  = {Favaro, E. and others},
+  title   = {Glucose utilization via glycogen phosphorylase sustains cancer cell survival and proliferation},
+  journal = {Cell Reports},
+  year    = {2012},
+  volume  = {2},
+  number  = {2},
+  pages   = {229--240},
+  doi     = {10.1016/j.celrep.2012.07.010}
+}
+
+@Article{PMC9240045,
+  author  = {Zhang, P. and others},
+  title   = {PYGL-mediated glycogenolysis promotes colon cancer cell survival under hypoxia},
+  journal = {Cell Death and Differentiation},
+  year    = {2022},
+  volume  = {29},
+  pages   = {1140--1153},
+  doi     = {10.1038/s41418-021-00904-w}
+}
+
+@Article{PURE_Ulster,
+  author  = {Lynch, D. and others},
+  title   = {Glycogen metabolism in Glioblastoma: A potential target for therapy},
+  journal = {Frontiers in Neurology},
+  year    = {2021},
+  volume  = {12},
+  pages   = {652931},
+  doi     = {10.3389/fneur.2021.652931}
+}
+
+@Article{Wang2014,
+  author  = {Wang, X. and Slebos, R. J. and Wang, D. and others},
+  title   = {Protein variations-informed database searching for confident peptide identification in precision oncology},
+  journal = {Proteomics},
+  year    = {2014},
+  volume  = {14},
+  number  = {19},
+  pages   = {2135--2145},
+  doi     = {10.1002/pmic.201400153}
+}
+
+@Article{Gessulat2019,
+  author  = {Gessulat, S. and Schmidt, T. and Zolg, D. P. and others},
+  title   = {Prosit: proteome-wide prediction of peptide tandem mass spectra by deep learning},
+  journal = {Nature Methods},
+  year    = {2019},
+  volume  = {16},
+  number  = {6},
+  pages   = {509--518},
+  doi     = {10.1038/s41592-019-0426-7}
+}
+
+@Article{Pertosi2016,
+  author  = {Pertosi, M. and Ovelleiro, D. and others},
+  title   = {Tandem Mass Tagging for Quantitative Proteomics},
+  journal = {Methods in Molecular Biology},
+  year    = {2016},
+  volume  = {1410},
+  pages   = {235--251},
+  doi     = {10.1007/978-1-4939-3524-6_14}
+}
+
+@Article{Choudhary2001,
+  author  = {Choudhary, J. S. and Blackstock, W. P. and Creasy, D. M. and Cottrell, J. S.},
+  title   = {Interrogating the human genome using uninterpreted mass spectrometry data},
+  journal = {Proteomics},
+  year    = {2001},
+  volume  = {1},
+  number  = {5},
+  pages   = {651--667},
+  doi     = {10.1002/1615-9861(200105)1:5<651::AID-PROT651>3.0.CO;2-B}
+}
+
+@Article{Wang2011,
+  author  = {Wang, X. and Zhang, B.},
+  title   = {customProDB: an R package to generate customized protein databases from RNA-Seq data for proteomics applications},
+  journal = {Bioinformatics},
+  year    = {2011},
+  volume  = {29},
+  number  = {24},
+  pages   = {3235--3237},
+  doi     = {10.1093/bioinformatics/btt543}
+}
+
+@Article{Alfaro2014,
+  author  = {Alfaro, J. A. and Sinha, A. and Kislinger, T. and Boutros, P. C.},
+  title   = {Onco-proteogenomics: cancer proteomics joins forces with genomics},
+  journal = {Nature Methods},
+  year    = {2014},
+  volume  = {11},
+  number  = {11},
+  pages   = {1107--1113},
+  doi     = {10.1038/nmeth.3138}
+}
+
+@Misc{UniprotQ9C0H9,
+  author       = {{UniProt Consortium}},
+  title        = {Protein SRCIN1 - Q9C0H9},
+  howpublished = {\url{https://www.uniprot.org/uniprotkb/Q9C0H9/entry}},
+  year         = {2024}
+}
+
+@Article{NCOR1_PMC,
+  author  = {Mottis, A. and others},
+  title   = {NCOR1: a key regulator of metabolism and disease},
+  journal = {Journal of Clinical Investigation},
+  year    = {2013},
+  volume  = {123},
+  number  = {11},
+  pages   = {4557--4563},
+  doi     = {10.1172/JCI70540}
+}
+
+@Misc{UniprotQ5T4S7,
+  author       = {{UniProt Consortium}},
+  title        = {Protein UBR4 - Q5T4S7},
+  howpublished = {\url{https://www.uniprot.org/uniprotkb/Q5T4S7/entry}},
+  year         = {2024}
+}
+
+@Article{PML_PMC,
+  author  = {Bernardi, R. and Pandolfi, P. P.},
+  title   = {Structure, dynamics and functions of PML nuclear bodies},
+  journal = {Nature Reviews Molecular Cell Biology},
+  year    = {2007},
+  volume  = {8},
+  number  = {12},
+  pages   = {1006--1016},
+  doi     = {10.1038/nrm2277}
+}
+
+@Misc{EGFR_PubChem,
+  author       = {{National Center for Biotechnology Information}},
+  title        = {EGFR epidermal growth factor receptor [Homo sapiens]},
+  howpublished = {\url{https://pubchem.ncbi.nlm.nih.gov/gene/EGFR/human}},
+  year         = {2024}
+}
