--- a/components/acknowledgements.tex
+++ b/components/acknowledgements.tex
@@ -13,7 +13,12 @@
 
 \vspace{1cm}
 
+First and foremost, I would like to express my deepest gratitude to \textbf{Daniela Klaproth-Andrade}. Thank you for your unwavering support at any time of the day, for patiently dealing with my moments of despair at the most frustrating hurdles, and for constantly reminding me to stay rational and focused when things got complicated. Your guidance was the backbone of this work.
 
+I am sincerely grateful to \textbf{Prof. Dr. Julien Gagneur} and \textbf{Prof. Dr. Mathias Wilhelm} for their incredible expertise and sharp analytical insights. Your conceptual guidance and ability to prioritize the most impactful directions were essential in shaping this thesis and pushing it to its full potential.
 
+A special thanks goes to my colleagues and friends \textbf{Yanik Bruns}, \textbf{Niklas Feuerstein}, \textbf{Franziska Koller}, \textbf{Samuel Khan}, and \textbf{Wassim Gabriel}. Thank you for the countless ideas, the technical help, and the inspiring discussions that enriched this project.
 
-If someone contributed to the thesis... might be good to thank them here.
+I would also like to thank \textbf{Prof. Dr. Bernhard Küster}, \textbf{Cecilia Jensen}, and \textbf{Johanna Tüshaus} from the Küster Lab. Your profound biological expertise and the swift provision of the glioma datasets were crucial for the success of this research. Thank you for always being available for quick answers and valuable feedback.
+
+Finally, I want to thank my \textbf{family and friends}. Thank you for your endless mental support, for keeping me grounded, and for the hours spent proofreading this thesis. Your encouragement made this journey possible.
