--- a/components/settings.tex
+++ b/components/settings.tex
@@ -15,6 +15,12 @@
 \renewcommand*{\footrulewidth}{0pt}
 \fancyhf{}
 
+\fancypagestyle{plain}{
+\fancyhf{}
+\fancyfoot[C]{\roman{page}}
+\renewcommand{\headrulewidth}{0pt}
+}
+
 
 % use german characters as well
 \usepackage[utf8]{inputenc}       % allow Latin1 characters
