--- a/bibliography/literature.bib
+++ b/bibliography/literature.bib
@@ -698,3 +698,66 @@ The identification of these additional sequences suggests that the "dark proteom
   howpublished = {\url{https://pubchem.ncbi.nlm.nih.gov/gene/EGFR/human}},
   year         = {2024}
 }
+
+@Article{Hulstaert2020,
+  author  = {Hulstaert, N. and others},
+  title   = {ThermoRawFileParser: modular, containerized, and cross-platform RAW file conversion},
+  journal = {Journal of Proteome Research},
+  year    = {2020},
+  volume  = {19},
+  number  = {1},
+  pages   = {537--542},
+  doi     = {10.1021/acs.jproteome.9b00328}
+}
+
+@Article{Tyanova2016,
+  author  = {Tyanova, S. and Temu, T. and Cox, J.},
+  title   = {The MaxQuant computational platform for mass spectrometry-based proteomics},
+  journal = {Nature Protocols},
+  year    = {2016},
+  volume  = {11},
+  number  = {12},
+  pages   = {2301--2319},
+  doi     = {10.1038/nprot.2016.136}
+}
+
+@Article{McLaren2016,
+  author  = {McLaren, W. and Gil, L. and Hunt, S. E. and others},
+  title   = {The Ensembl Variant Effect Predictor},
+  journal = {Genome Biology},
+  year    = {2016},
+  volume  = {17},
+  number  = {1},
+  pages   = {122},
+  doi     = {10.1186/s13059-016-0974-4}
+}
+
+@Article{Toprak2014,
+  author  = {Toprak, U. H. and Gillet, L. C. and Maiolica, A. and others},
+  title   = {Conserved peptide fragmentation as a benchmarking tool for mass spectrometers and acquisition methods},
+  journal = {Molecular & Cellular Proteomics},
+  year    = {2014},
+  volume  = {13},
+  number  = {8},
+  pages   = {2056--2071},
+  doi     = {10.1074/mcp.O113.036475}
+}
+
+@Article{Gessulat2019,
+  author  = {Gessulat, S. and Schmidt, T. and Zolg, D. P. and others},
+  title   = {Prosit: proteome-wide prediction of peptide tandem mass spectra by deep learning},
+  journal = {Nature Methods},
+  year    = {2019},
+  volume  = {16},
+  number  = {6},
+  pages   = {509--518},
+  doi     = {10.1038/s41592-019-0426-7}
+}
+
+@Article{Wilhelm2024,
+  author  = {Wilhelm, M. and others},
+  title   = {Koina: A democratic ecosystem for model-based proteomics},
+  journal = {Nature Methods},
+  year    = {2024},
+  note    = {Software available via wilhelmlab.org}
+}
