--- a/main.tex
+++ b/main.tex
@@ -41,9 +41,11 @@
 	\pagestyle{plain}
 	\setcounter{page}{1}
 	
+	\clearemptydoublepage
 	
 	
 	\input{components/acknowledgements}
+	\clearemptydoublepage
 	
 	\input{components/abstract}
 	
