--- a/main.tex
+++ b/main.tex
@@ -41,13 +41,13 @@
 	\pagestyle{plain}
 	\setcounter{page}{1}
 	
-	\clearemptydoublepage
 	
 	
 	\input{components/acknowledgements}
-	\clearemptydoublepage
+	\clearemptydoublepage 
 	
 	\input{components/abstract}
+	\clearemptydoublepage t
 	
 	\input{components/kurzzusammenfassung}
 
