--- a/bibliography/literature.bib
+++ b/bibliography/literature.bib
@@ -761,3 +761,54 @@ The identification of these additional sequences suggests that the "dark proteom
   year    = {2024},
   note    = {Software available via wilhelmlab.org}
 }
+
+@Article{Mertins2016,
+  author  = {Mertins, P. and others},
+  title   = {Proteogenomics connects somatic mutations to signalling in breast cancer},
+  journal = {Nature},
+  year    = {2016},
+  volume  = {534},
+  number  = {7605},
+  pages   = {55--62},
+  doi     = {10.1038/nature18003}
+}
+
+@Article{Smith2019,
+  author  = {Smith, R. and others},
+  title   = {The role of PTMs in the development and progression of Glioma},
+  journal = {Frontiers in Oncology},
+  year    = {2019},
+  volume  = {9},
+  pages   = {1208},
+  doi     = {10.3389/fonc.2019.01208}
+}
+
+@Article{Thompson2003,
+  author  = {Thompson, A. and others},
+  title   = {Tandem mass tags: a novel quantification strategy for comparative analysis of complex protein mixtures},
+  journal = {Analytical Chemistry},
+  year    = {2003},
+  volume  = {75},
+  number  = {8},
+  pages   = {1895--1904},
+  doi     = {10.1021/ac0262560}
+}
+
+@Article{Chick2015,
+  author  = {Chick, J. M. and others},
+  title   = {A mass-tolerant database search identifies a vast spectrum of modifications and sequences},
+  journal = {Nature Methods},
+  year    = {2015},
+  volume  = {12},
+  number  = {12},
+  pages   = {1137--1141},
+  doi     = {10.1038/nmeth.3620}
+}
+
+@Article{Klaproth2024,
+  author  = {Klaproth, J. and others},
+  title   = {Modanovo: Identifying post-translational modifications with de novo peptide sequencing},
+  journal = {Nature Communications (Preprint/Expected)},
+  year    = {2024},
+  note    = {Reference to latest PTM-capable transformer models}
+}
