--- a/bibliography/literature.bib
+++ b/bibliography/literature.bib
@@ -445,7 +445,7 @@ A primary objective of this study was to evaluate the extent to which \textit{de
 
 The comparison of unique peptide sequences identified by both methods reveals a substantial expansion of the detectable proteome. As shown in Figure \ref{fig:unique_peps}, the \textit{de novo} approach identified approximately 40,000 unique peptides that were also found by MaxQuant, demonstrating high consistency in the "known" space. 
 
-\begin{figure}[H][htbp]
+\begin{figure}[H] 
     \centering
     \includegraphics[width=0.7\textwidth]{plots/results/uniquePeps.png}
     \caption{Overlap of unique peptide identifications between the proposed \textit{de novo} model and MaxQuant. The model successfully recovers the majority of MQ identifications while contributing 40,000 additional unique sequences.}
