--- a/components/commands.tex
+++ b/components/commands.tex
@@ -76,7 +76,7 @@
 
 % inserting figures
 \newcommand{\insertfigure}[4]{ % Filename, Caption, Label, Width percent of textwidth
-	\begin{figure}[H][htbp]
+	\begin{figure}[H] 
 		\begin{center}
 			\includegraphics[width=#4\textwidth]{#1}
 		\end{center}
